Bailey's part done. Scrap 5

--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
         <h2>Section Title</h2>
         <p>This is a paragraph of text inside a section.</p>
         <img src="https://user-images.githubusercontent.com/5963600/108429318-c890b480-720d-11eb-8e49-cbe2de42c596.png"></img>
+        <div id="div1" class="mainContainer">
+            This is a div. We have stuff in it.
+            <div id="div2" class="subContainer1">
+                This is a div. We have stuff in it.
+            </div>
+        </div>
+        
+
+
     </section>    
     <script src="script.js"></script>
 </body>
